tests/test_files_pa3/external/errors/WrongMainSignature1.ic
class WrongMainSignature1{
	
	static string jojo(){
		return "jojo";
	}
	
	//Error: signature missing static
	void main (string[] args){
		WrongMainSignature1.jojo();
	} 
	
}